# P6_MLOps_1-2

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/processed/reports/: memo_soutenance_mentor_15min.html  presentation_mentor_15min.html  rapport_conformite_cahier_des_charges.html  rapport_methodologique_pipeline.html
notebooks/: 01_EDA.ipynb  01_PREPARATION_DONNEES.ipynb  02_DB_Completion.ipynb  02_MODELISATION_BASELINES_MLFLOW.ipynb  03_OPTIMISATION_SEUIL_EXPLICABILITE.ipynb  03_PREPROCESSING.ipynb
scripts/: create_db.py  create_tables.py  load_data.py
src/: Fonctions_EDA.py  Fonctions_MODEL.py  __init__.py
